# personalized-learning-coach

./: .env.local  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  VIDEO_SCRIPT.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_local.py  submission_details.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
memory/: schema.json
observability/: logger.py  tracer.py
personalized_learning_coach/a2a/: agent_card.json
personalized_learning_coach/agents/: adk_agents.py  assessment_agent.py  base_agent.py  coach_agent.py  orchestrator.py  planner_agent.py  progress_agent.py  tutor_agent.py
personalized_learning_coach/evaluation/: judge.py
personalized_learning_coach/evaluation/data/: golden_dataset.json
personalized_learning_coach/memory/: kv_store.py  manager.py  schema.json  session.py  store.json
personalized_learning_coach/security/: guardrails.py
personalized_learning_coach/tools/: grader_tool.py  registry.py  standards.json  standards_lookup.py
personalized_learning_coach/utils/: llm_client.py
prompts/: assessment_prompt.md  coach_prompt.md  orchestrator_prompt.md  planner_prompt.md  progress_prompt.md  tutor_prompt.md
scripts/: demo_assessment.py  demo_memory.py  test_coach.py  test_logging.py  test_planner.py  test_progress.py  test_tools.py  test_tracing.py  test_tutor.py
tests/: test_assessment_agent.py  test_grader.py  test_memory.py
tests/evaluation/: evaluate_agents.py  golden_cases.json
tools/: grader_tool.py
